# snakegame_raylib

./: .clang-format  CMakeLists.txt  README.md  game.md
src/: main.cpp
